--- a/EnglishMaster/Properties/launchSettings.json
+++ b/EnglishMaster/Properties/launchSettings.json
@@ -13,6 +13,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "applicationUrl": "http://localhost:5011",
+      "launchUrl": "EnglishMaster",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -20,6 +21,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
+      "launchUrl": "EnglishMaster",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
